# LearnVTK

./: .gitignore  CLAUDE.md  CMakePresets.json  CmakeLists.txt  README.md  USAGE.md  build.bat
cmake/: DeployQt.cmake
docs/notes/: 2026-07-19-ImageData标量渲染可见性.md  2026-07-19-VSCode调试配置原理.md  2026-07-19-flywheel-startup.md  2026-07-19-imageData-scalar-visibility.md  2026-07-19-vscode-debug-setup.md  2026-07-19-启动阶段的飞轮效应.md  2026-07-20-PointData与CellData渲染差异.md  2026-07-20-RectGrid缺SetDimensions无效.md  2026-07-20-Tuple命名设计.md  2026-07-20-VTK四步排查法.md  2026-07-20-多标量与GetScalarRange机制.md  README.md  模板.md
docs/superpowers/: PROGRESS.md
docs/superpowers/guides/: Chapter1-DataModel.md
docs/superpowers/plans/: 2026-07-11-stage1-pipeline-foundation.md
docs/superpowers/specs/: 2026-07-11-vtk-rendering-engineer-roadmap-design.md
src/Chapter1/: CMakeLists.txt  DataModelDemo.cpp  DataModelDemo.h  main.cpp
src/Chapter1_BaseVTK/: CmakeLists.txt  MainRenderWindow.cpp  MainRenderWindow.h  MainRenderWindow.ui  NodeTreeWidget.cpp  NodeTreeWidget.h  main.cpp
src/_Backup/Chapter1_BaseVTK/: CGNSDataParser.cpp  CGNSDataParser.h  MainRenderWindow.cpp  MainRenderWindow.h  MainRenderWindow.ui  main.cpp
